--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+</style>
+
+font-family: 'Pacifico', cursive; /
+
+/ <style>
+  @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+</style>
+font-family: 'Fugaz One', sans-serif; */
